# test_qt_proj

./: CMakeLists.txt  readme.txt  testproj.files  testproj.includes
cmake/: tools.cmake
otherplug/: CMakeLists.txt  DigiCalend.qml  mydate.cpp  mydate.h  otherplug.cpp  otherplug.h
testapp/: CMakeLists.txt  main.cpp  main.qml  readme.txt
testplug/: AltClock.qml  CMakeLists.txt  DigiClock.qml  mytime.cpp  mytime.h  testplug.cpp  testplug.h
testui/: CMakeLists.txt  MyWidget.qml
